@@ -14,6 +14,7 @@ import java.util.List;
 import java.util.Set;
 import java.util.UUID;
 import java.util.concurrent.ConcurrentHashMap;
+import java.util.stream.Collectors;
 
 @Component
 public class ServerManager implements IServerManager {
@@ -40,7 +41,7 @@ public class ServerManager implements IServerManager {
     @Override
     public boolean isOnline(GlobalPlayer player) {
         return getConnectedServers().stream().filter(serverData ->
-                serverData.getNames().stream().map(String::toLowerCase).toList()
+                serverData.getNames().stream().map(String::toLowerCase).collect(Collectors.toList())
                         .contains(player.getName().toLowerCase())).findFirst().orElse(null) != null;
     }
 
